--- a/BaiTapLon1/BaiTapLon1_Nhom/code_1.3.3_1.3.4/SweetViz.ipynb
+++ b/BaiTapLon1/BaiTapLon1_Nhom/code_1.3.3_1.3.4/SweetViz.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2acd4b51",
    "metadata": {},
    "outputs": [],
@@ -71,26 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "31a1ed7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Khai báo thư viện \n",
     "import sweetviz as sv\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "\n",
+    "# Phiên bản numpy phù hợp nhất: pip install numpy==1.23.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b77bcbd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69bc86d0374d49978adbc06218c391b1",
+       "model_id": "fc211ec237ca42d7bbaa55a93af0a49b",
        "version_major": 2,
        "version_minor": 0
       },
