--- a/BaiTapLon1/BaiTapLon1_Nhom/code_1.3.3_1.3.4/AutoViz.ipynb
+++ b/BaiTapLon1/BaiTapLon1_Nhom/code_1.3.3_1.3.4/AutoViz.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9770cd21",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f2cca6cf",
    "metadata": {},
    "outputs": [
@@ -114,93 +114,93 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_67096_row0_col0, #T_67096_row0_col3, #T_67096_row0_col4, #T_67096_row0_col5, #T_67096_row1_col0, #T_67096_row1_col3, #T_67096_row1_col4, #T_67096_row1_col5, #T_67096_row2_col0, #T_67096_row2_col3, #T_67096_row2_col4, #T_67096_row2_col5, #T_67096_row3_col0, #T_67096_row3_col3, #T_67096_row3_col4, #T_67096_row3_col5, #T_67096_row4_col0, #T_67096_row4_col3, #T_67096_row4_col4, #T_67096_row4_col5 {\n",
+       "#T_fc402_row0_col0, #T_fc402_row0_col3, #T_fc402_row0_col4, #T_fc402_row0_col5, #T_fc402_row1_col0, #T_fc402_row1_col3, #T_fc402_row1_col4, #T_fc402_row1_col5, #T_fc402_row2_col0, #T_fc402_row2_col3, #T_fc402_row2_col4, #T_fc402_row2_col5, #T_fc402_row3_col0, #T_fc402_row3_col3, #T_fc402_row3_col4, #T_fc402_row3_col5, #T_fc402_row4_col0, #T_fc402_row4_col3, #T_fc402_row4_col4, #T_fc402_row4_col5 {\n",
        "  font-family: Segoe UI;\n",
        "}\n",
-       "#T_67096_row0_col1, #T_67096_row1_col1, #T_67096_row1_col2, #T_67096_row2_col1, #T_67096_row2_col2, #T_67096_row3_col1, #T_67096_row4_col1 {\n",
+       "#T_fc402_row0_col1, #T_fc402_row1_col1, #T_fc402_row1_col2, #T_fc402_row2_col1, #T_fc402_row2_col2, #T_fc402_row3_col1, #T_fc402_row4_col1 {\n",
        "  background-color: #fff5f0;\n",
        "  color: #000000;\n",
        "  font-family: Segoe UI;\n",
        "}\n",
-       "#T_67096_row0_col2 {\n",
+       "#T_fc402_row0_col2 {\n",
        "  background-color: #f14331;\n",
        "  color: #f1f1f1;\n",
        "  font-family: Segoe UI;\n",
        "}\n",
-       "#T_67096_row3_col2 {\n",
+       "#T_fc402_row3_col2 {\n",
        "  background-color: #ffeee7;\n",
        "  color: #000000;\n",
        "  font-family: Segoe UI;\n",
        "}\n",
-       "#T_67096_row4_col2 {\n",
+       "#T_fc402_row4_col2 {\n",
        "  background-color: #67000d;\n",
        "  color: #f1f1f1;\n",
        "  font-family: Segoe UI;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_67096\">\n",
+       "<table id=\"T_fc402\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_67096_level0_col0\" class=\"col_heading level0 col0\" >Data Type</th>\n",
-       "      <th id=\"T_67096_level0_col1\" class=\"col_heading level0 col1\" >Missing Values%</th>\n",
-       "      <th id=\"T_67096_level0_col2\" class=\"col_heading level0 col2\" >Unique Values%</th>\n",
-       "      <th id=\"T_67096_level0_col3\" class=\"col_heading level0 col3\" >Minimum Value</th>\n",
-       "      <th id=\"T_67096_level0_col4\" class=\"col_heading level0 col4\" >Maximum Value</th>\n",
-       "      <th id=\"T_67096_level0_col5\" class=\"col_heading level0 col5\" >DQ Issue</th>\n",
+       "      <th id=\"T_fc402_level0_col0\" class=\"col_heading level0 col0\" >Data Type</th>\n",
+       "      <th id=\"T_fc402_level0_col1\" class=\"col_heading level0 col1\" >Missing Values%</th>\n",
+       "      <th id=\"T_fc402_level0_col2\" class=\"col_heading level0 col2\" >Unique Values%</th>\n",
+       "      <th id=\"T_fc402_level0_col3\" class=\"col_heading level0 col3\" >Minimum Value</th>\n",
+       "      <th id=\"T_fc402_level0_col4\" class=\"col_heading level0 col4\" >Maximum Value</th>\n",
+       "      <th id=\"T_fc402_level0_col5\" class=\"col_heading level0 col5\" >DQ Issue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_67096_level0_row0\" class=\"row_heading level0 row0\" >Age</th>\n",
-       "      <td id=\"T_67096_row0_col0\" class=\"data row0 col0\" >int64</td>\n",
-       "      <td id=\"T_67096_row0_col1\" class=\"data row0 col1\" >0.000000</td>\n",
-       "      <td id=\"T_67096_row0_col2\" class=\"data row0 col2\" >62</td>\n",
-       "      <td id=\"T_67096_row0_col3\" class=\"data row0 col3\" >21.000000</td>\n",
-       "      <td id=\"T_67096_row0_col4\" class=\"data row0 col4\" >65.000000</td>\n",
-       "      <td id=\"T_67096_row0_col5\" class=\"data row0 col5\" >No issue</td>\n",
+       "      <th id=\"T_fc402_level0_row0\" class=\"row_heading level0 row0\" >Age</th>\n",
+       "      <td id=\"T_fc402_row0_col0\" class=\"data row0 col0\" >int64</td>\n",
+       "      <td id=\"T_fc402_row0_col1\" class=\"data row0 col1\" >0.000000</td>\n",
+       "      <td id=\"T_fc402_row0_col2\" class=\"data row0 col2\" >62</td>\n",
+       "      <td id=\"T_fc402_row0_col3\" class=\"data row0 col3\" >21.000000</td>\n",
+       "      <td id=\"T_fc402_row0_col4\" class=\"data row0 col4\" >65.000000</td>\n",
+       "      <td id=\"T_fc402_row0_col5\" class=\"data row0 col5\" >No issue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_67096_level0_row1\" class=\"row_heading level0 row1\" >Gender</th>\n",
-       "      <td id=\"T_67096_row1_col0\" class=\"data row1 col0\" >object</td>\n",
-       "      <td id=\"T_67096_row1_col1\" class=\"data row1 col1\" >0.000000</td>\n",
-       "      <td id=\"T_67096_row1_col2\" class=\"data row1 col2\" >4</td>\n",
-       "      <td id=\"T_67096_row1_col3\" class=\"data row1 col3\" ></td>\n",
-       "      <td id=\"T_67096_row1_col4\" class=\"data row1 col4\" ></td>\n",
-       "      <td id=\"T_67096_row1_col5\" class=\"data row1 col5\" >No issue</td>\n",
+       "      <th id=\"T_fc402_level0_row1\" class=\"row_heading level0 row1\" >Gender</th>\n",
+       "      <td id=\"T_fc402_row1_col0\" class=\"data row1 col0\" >object</td>\n",
+       "      <td id=\"T_fc402_row1_col1\" class=\"data row1 col1\" >0.000000</td>\n",
+       "      <td id=\"T_fc402_row1_col2\" class=\"data row1 col2\" >4</td>\n",
+       "      <td id=\"T_fc402_row1_col3\" class=\"data row1 col3\" ></td>\n",
+       "      <td id=\"T_fc402_row1_col4\" class=\"data row1 col4\" ></td>\n",
+       "      <td id=\"T_fc402_row1_col5\" class=\"data row1 col5\" >No issue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_67096_level0_row2\" class=\"row_heading level0 row2\" >Campaign_Joined</th>\n",
-       "      <td id=\"T_67096_row2_col0\" class=\"data row2 col0\" >object</td>\n",
-       "      <td id=\"T_67096_row2_col1\" class=\"data row2 col1\" >0.000000</td>\n",
-       "      <td id=\"T_67096_row2_col2\" class=\"data row2 col2\" >4</td>\n",
-       "      <td id=\"T_67096_row2_col3\" class=\"data row2 col3\" ></td>\n",
-       "      <td id=\"T_67096_row2_col4\" class=\"data row2 col4\" ></td>\n",
-       "      <td id=\"T_67096_row2_col5\" class=\"data row2 col5\" >No issue</td>\n",
+       "      <th id=\"T_fc402_level0_row2\" class=\"row_heading level0 row2\" >Campaign_Joined</th>\n",
+       "      <td id=\"T_fc402_row2_col0\" class=\"data row2 col0\" >object</td>\n",
+       "      <td id=\"T_fc402_row2_col1\" class=\"data row2 col1\" >0.000000</td>\n",
+       "      <td id=\"T_fc402_row2_col2\" class=\"data row2 col2\" >4</td>\n",
+       "      <td id=\"T_fc402_row2_col3\" class=\"data row2 col3\" ></td>\n",
+       "      <td id=\"T_fc402_row2_col4\" class=\"data row2 col4\" ></td>\n",
+       "      <td id=\"T_fc402_row2_col5\" class=\"data row2 col5\" >No issue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_67096_level0_row3\" class=\"row_heading level0 row3\" >Channel</th>\n",
-       "      <td id=\"T_67096_row3_col0\" class=\"data row3 col0\" >object</td>\n",
-       "      <td id=\"T_67096_row3_col1\" class=\"data row3 col1\" >0.000000</td>\n",
-       "      <td id=\"T_67096_row3_col2\" class=\"data row3 col2\" >8</td>\n",
-       "      <td id=\"T_67096_row3_col3\" class=\"data row3 col3\" ></td>\n",
-       "      <td id=\"T_67096_row3_col4\" class=\"data row3 col4\" ></td>\n",
-       "      <td id=\"T_67096_row3_col5\" class=\"data row3 col5\" >No issue</td>\n",
+       "      <th id=\"T_fc402_level0_row3\" class=\"row_heading level0 row3\" >Channel</th>\n",
+       "      <td id=\"T_fc402_row3_col0\" class=\"data row3 col0\" >object</td>\n",
+       "      <td id=\"T_fc402_row3_col1\" class=\"data row3 col1\" >0.000000</td>\n",
+       "      <td id=\"T_fc402_row3_col2\" class=\"data row3 col2\" >8</td>\n",
+       "      <td id=\"T_fc402_row3_col3\" class=\"data row3 col3\" ></td>\n",
+       "      <td id=\"T_fc402_row3_col4\" class=\"data row3 col4\" ></td>\n",
+       "      <td id=\"T_fc402_row3_col5\" class=\"data row3 col5\" >No issue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_67096_level0_row4\" class=\"row_heading level0 row4\" >Purchase_Amount</th>\n",
-       "      <td id=\"T_67096_row4_col0\" class=\"data row4 col0\" >float64</td>\n",
-       "      <td id=\"T_67096_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
-       "      <td id=\"T_67096_row4_col2\" class=\"data row4 col2\" >100</td>\n",
-       "      <td id=\"T_67096_row4_col3\" class=\"data row4 col3\" >75.940000</td>\n",
-       "      <td id=\"T_67096_row4_col4\" class=\"data row4 col4\" >1947.180000</td>\n",
-       "      <td id=\"T_67096_row4_col5\" class=\"data row4 col5\" >Target column</td>\n",
+       "      <th id=\"T_fc402_level0_row4\" class=\"row_heading level0 row4\" >Purchase_Amount</th>\n",
+       "      <td id=\"T_fc402_row4_col0\" class=\"data row4 col0\" >float64</td>\n",
+       "      <td id=\"T_fc402_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
+       "      <td id=\"T_fc402_row4_col2\" class=\"data row4 col2\" >100</td>\n",
+       "      <td id=\"T_fc402_row4_col3\" class=\"data row4 col3\" >75.940000</td>\n",
+       "      <td id=\"T_fc402_row4_col4\" class=\"data row4 col4\" >1947.180000</td>\n",
+       "      <td id=\"T_fc402_row4_col5\" class=\"data row4 col5\" >Target column</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2335f2bfdd0>"
+       "<pandas.io.formats.style.Styler at 0x1e6be9b1310>"
       ]
      },
      "metadata": {},
@@ -211,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "All Plots done\n",
-      "Time to run AutoViz = 0 seconds \n",
+      "Time to run AutoViz = 1 seconds \n",
       "\n",
       " ###################### AUTO VISUALIZATION Completed ########################\n"
      ]
