--- a/BaiTapLon1/BaiTapLon1_Nhom/code_1.3.3_1.3.4/SweetViz.ipynb
+++ b/BaiTapLon1/BaiTapLon1_Nhom/code_1.3.3_1.3.4/SweetViz.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2acd4b51",
    "metadata": {},
    "outputs": [],
@@ -70,8 +70,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7d51beb",
+   "metadata": {},
+   "source": [
+    "### Giả sử ta có tệp tin dữ liệu marketing_campaign, file này chứa thông tin mô phỏng của một chiến dịch marketing. Các bản ghi thể hiện thông tin khách hàng và hành vi tham gia chiến dịch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91a64d82",
+   "metadata": {},
+   "source": [
+    "#### Các trường dữ liệu có trong file:\n",
+    "#### CustomerID – Mã định danh duy nhất của khách hàng.\n",
+    "#### Age – Tuổi của khách hàng.\n",
+    "#### Gender – Giới tính (Male / Female).\n",
+    "#### Income – Mức thu nhập hàng năm (USD).\n",
+    "#### Campaign_Joined – Tên chiến dịch marketing mà khách hàng tham gia (Campaign_A, Campaign_B, v.v.).\n",
+    "#### Purchase_Amount – Số tiền mà khách hàng đã chi tiêu trong chiến dịch.\n",
+    "#### Channel – Kênh tiếp thị mà khách hàng tiếp cận (Email, Social Media, TV, Web, v.v.)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31a1ed7c",
    "metadata": {},
    "outputs": [],
@@ -85,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b77bcbd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc211ec237ca42d7bbaa55a93af0a49b",
+       "model_id": "5472b7a1ba48463d956e6c13e8603390",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,6 +142,88 @@
     "report.show_html('sweetviz_report.html')\n",
     "\n",
     "# Sau khi chạy, báo cáo EDA trực quan được xuất ra file HTML và có thể mở bằng trình duyệt.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a939528e",
+   "metadata": {},
+   "source": [
+    "# Nhận xét\n",
+    "#### Công cụ SweetViz (và cụ thể là phiên bản ydata-profiling dùng trong báo cáo này) đã thực hiện phân tích tự động (EDA) trên tập dữ liệu Marketing Campaign và tạo ra báo cáo chi tiết với các phần chính sau:\n",
+    "#### 1. Tổng quan dữ liệu (Overview)\n",
+    "#### Số biến (Number of variables): 1\n",
+    "#### Số quan sát (Number of observations): 2,240\n",
+    "#### Ô bị thiếu (Missing cells): 0 (tức là không có giá trị thiếu)\n",
+    "#### Tổng dung lượng dữ liệu trong bộ nhớ: 17.6 KiB\n",
+    "#### Kích thước trung bình mỗi bản ghi: 8.1 bytes\n",
+    "#### Loại biến: Chỉ có 1 biến dạng Text\n",
+    "#### => Điều này cho thấy dữ liệu được nạp vào báo cáo bị gộp thành một cột duy nhất chứa toàn bộ nội dung (các giá trị bị dính tab \\t), có thể do lỗi tách cột trong tệp CSV ban đầu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9ab081",
+   "metadata": {},
+   "source": [
+    "#### 2. Cảnh báo (Alerts)\n",
+    "\n",
+    "#### Có 1 cảnh báo:\n",
+    "#### Toàn bộ cột “ID Year_Birth Education Marital_Status Income Kidhome Teenhome ... Response” có giá trị duy nhất cho từng dòng\n",
+    "#### => Điều này nghĩa là mỗi dòng là một bản ghi hoàn toàn khác nhau, không có giá trị trùng lặp, nhưng do bị dính cột nên hệ thống hiểu nhầm là 1 chuỗi text duy nhất."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "369a6c4f",
+   "metadata": {},
+   "source": [
+    "#### 3. Biến trong dữ liệu (Variables)\n",
+    "\n",
+    "#### Chỉ có 1 biến dạng Text với tên dài bao gồm tất cả tên cột (ID Year_Birth Education ... Response).\n",
+    "#### Số lượng giá trị khác nhau: 2,240 (tức là mỗi dòng duy nhất).\n",
+    "#### Giá trị bị thiếu: 0%.\n",
+    "#### Dung lượng bộ nhớ: 17.6 KiB\n",
+    "#### Độ dài trung bình chuỗi: khoảng 96 ký tự, tối đa 109 ký tự.\n",
+    "#### Ký tự Unicode phân tích: 44 loại ký tự khác nhau, thuộc 2 bộ ký tự Unicode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164f7ce7",
+   "metadata": {},
+   "source": [
+    "#### 4. Thiếu dữ liệu (Missing Values)\n",
+    "\n",
+    "#### Báo cáo hiển thị biểu đồ Nullity Matrix, cho thấy toàn bộ dữ liệu đầy đủ, không có cột hay hàng nào bị thiếu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "541b189b",
+   "metadata": {},
+   "source": [
+    "#### 5. Mẫu dữ liệu (Sample)\n",
+    "\n",
+    "#### Báo cáo liệt kê 5 dòng đầu tiên, ví dụ:\n",
+    "\n",
+    "#### 5524 1957 Graduation Single 58138 0 0 04-09-2012 58 635 88 546 ...\n",
+    "#### 2174 1954 Graduation Single 46344 1 1 08-03-2014 38 11 1 6 ...\n",
+    "\n",
+    "#### Điều này xác nhận rằng tệp gốc thực sự có nhiều cột, nhưng do lỗi định dạng khi đọc CSV (dấu phân cách tab \\t hoặc dấu phẩy ,) nên bị coi là một cột duy nhất."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4febee",
+   "metadata": {},
+   "source": [
+    "#### 6. Kết luận\n",
+    "\n",
+    "#### Công cụ SweetViz (thông qua YData Profiling) đã:\n",
+    "#### Phát hiện không có dữ liệu bị thiếu hoặc trùng lặp.\n",
+    "#### Xác định rằng dữ liệu hiện tại chưa được tách cột đúng cách.\n",
+    "#### Gợi ý rằng cần nạp lại file CSV với đúng delimiter (sep='\\t' hoặc sep=';') để phân tích chính xác hơn."
    ]
   },
   {
