--- a/BaiTapLon1/BaiTapLon1_Nhom/example_code_1.3.2.ipynb
+++ b/BaiTapLon1/BaiTapLon1_Nhom/example_code_1.3.2.ipynb
@@ -826,7 +826,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36ebb70655c24c3a84d25b5b225dbe53",
+       "model_id": "ad942d41d71444f3b5dcfa1db687ac66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -841,13 +841,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 53.47it/s]\n"
+      "100%|██████████| 7/7 [00:00<00:00, 9422.38it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "969c8e59701f4bdc8bef28a8e6f1cee4",
+       "model_id": "a5587efa74984291bb45bbe359e3bb61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -861,7 +861,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea81ee293ea542eda5e91e8f08437f16",
+       "model_id": "9365102ef2954be3b4c0a87af557da38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +875,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a4db9dc8fa24717859be4f9f428ec83",
+       "model_id": "768d73a55ea74dde89eba56dfe6c63a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -924,15 +924,23 @@
    "execution_count": null,
    "id": "9d2c350a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#2. Sử dụng công cụ\n",
     "import pandas as pd\n",
     "import dtale\n",
     "marketing_data = pd.read_csv(\"data/marketing_campaign.csv\")\n",
-    "dtale.show(marketing_data).open_browser()\n",
-    "\n",
-    "# Sau khi thực thi, trình duyệt web sẽ mở ra giao diện của D-Tale để bạn khám phá dữ liệu."
+    "dtale.show(marketing_data).open_browser()"
    ]
   },
   {
